26.0.19
-------

26.0.18
-------
(RB=1566293)
Make RestLiStreamCallbackAdapter non-final and public for extension in dash-cache

26.0.17
-------
(This version was used to produce custom builds. So skipping this to avoid confusion.)

26.0.16
-------
(RB=1552174)
Use ordered collection for classTemplateSpecs field

26.0.15
-------
(RB=1559338)
Add batch parameter for batchFinder in association template snapshot, to fix the incompatible issue that type cannnot be resolved

(RB=1550061)
Add HTML Documentation render for BatchFinder

26.0.14
-------
(RB=1560420)
add drain reader for unstructured data get

26.0.13
-------
(RB=1559736)
Tweak implementation a little to allow extension to support streaming normalized/deduped codecs in pemberly-api

26.0.12
-------
(RB=1559631)
Make some stuff more visible for overriding in pemberly-api

26.0.11
-------
(This version was used to produce custom builds. So skipping this to avoid confusion.)

26.0.10
------
(RB=1551561)
Rename KSON to LICOR aka LinkedIn Compact Object Representation

26.0.9
------
(RB=1546707)
Added missing accessors for request URI components

26.0.8
------
(RB=1497017)
Refactoring format of TimingKeys in R2 for better analysis

26.0.7
------
(This version was used to produce custom builds. So skipping this to avoid confusion.)

26.0.6
------
(RB=1543355)
Add timing marker for 2.0.0 URI parsing

26.0.5
------
(RB=1517716)
Add KSON support. KSON is a variant of JSON that serializes maps as lists, and supports optional compression of the payload using a shared symbol dictionary.

26.0.4
------
(RB=1527956)
Allow configurable basePath for d2 service znode under cluster path

26.0.3
------
(This version was used to produce custom builds. So skipping this to avoid confusion.)

26.0.2
------
(RB=1517698)