@@ -30,12 +30,12 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 
 /**
@@ -130,7 +130,13 @@ public class RestLiConfig
         ! "".equals(commaDelimitedResourcePackageNames.trim()))
     {
       _resourcePackageNames.clear();
-      addResourcePackageNames(commaDelimitedResourcePackageNames.split(","));
+
+      // The commas could have spaces around them like com.linkedin.foo , com.linkedin.bar.
+      // For such cases, trim those spaces.
+      addResourcePackageNames(
+          Arrays.stream(commaDelimitedResourcePackageNames.split(","))
+              .map(String::trim)
+              .collect(Collectors.toSet()));
     }
   }
 
